--- a/HW2/HW2style.css
+++ b/HW2/HW2style.css
@@ -19,8 +19,12 @@
 
 }
 
-/* below adds padding for appealing visual layout of the website page */
-   
+/* below adds padding for appealing visual layout of the website page */ 
 .header1, h5, p, h3 {
     padding-left: 20px;
+}
+
+.myNewAssign {
+    padding-left: 20px;
+    background-color: yellow;
 }
