final commit HW5

--- a/HW5/HW5Version2/HW5Version2/Views/Requests/Details.cshtml
+++ b/HW5/HW5Version2/HW5Version2/Views/Requests/Details.cshtml
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Request</h4>
+    <h4>Details of a Request</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
