--- a/HW5/HW5Version2/HW5Version2/Views/Requests/Index.cshtml
+++ b/HW5/HW5Version2/HW5Version2/Views/Requests/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<HW5Version2.Models.Request>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Request Log";
 }
 
-<h2>Index</h2>
+<h2>Request Log</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
