--- a/HW5/HW5Version2/HW5Version2/Views/Requests/Create.cshtml
+++ b/HW5/HW5Version2/HW5Version2/Views/Requests/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create Your Request</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
   @*  @Html.AntiForgeryToken() *@
     
     <div class="form-horizontal">
-        <h4>Request</h4>
+        <h4>Create a Request form here. Enter in your information and a description of your request at the end of this form.</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
