--- a/HW5/HW5Version2/HW5Version2/Views/Shared/_Layout.cshtml
+++ b/HW5/HW5Version2/HW5Version2/Views/Shared/_Layout.cshtml
@@ -16,12 +16,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Request Submissions", "Index", "Requests")</li>
                     <li>@Html.ActionLink("Create Request", "Create", "Requests")</li>
+                    <li>@Html.ActionLink("Request Log", "Index", "Requests")</li>
                 </ul>
             </div>
         </div>
