--- a/HW6/Hmwrk6/Hmwrk6/Views/Home/Index.cshtml
+++ b/HW6/Hmwrk6/Hmwrk6/Views/Home/Index.cshtml
@@ -5,7 +5,10 @@
 }
 
 <div class="row">
-    <h1 id="title">Client Search</h1>
+    <h1 id="pageHeader">World Wide Importers</h1>
+    <br />
+    <p>This page will allow you to search through the company's whole database. You can look up customers and employees of World Wide Importers.</p>
+    <h3 id="searchTitle">Client Search</h3>
     <div class="container-fluid">
         @using (Html.BeginForm("Index", "Home", FormMethod.Get, new { @class = "form-inline" }))
         {
@@ -17,6 +20,7 @@
             </div>
             if (ViewBag.show)
             {
+               
                 if (Model.Count() == 0)
                 {
                     <h4>This client doesn't exists.</h4>
