modifications for feature 3 & some comments added

--- a/HW6/Hmwrk6/Hmwrk6/Views/Home/Details.cshtml
+++ b/HW6/Hmwrk6/Hmwrk6/Views/Home/Details.cshtml
@@ -8,6 +8,12 @@
    need to make sure that the model folder is being referenced 
    this will link the folder models and use the one that was built inside of the ViewModel folder to run the queries of Person*@
 
+@section Header
+{
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin="" />    
+    <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js" integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA==" crossorigin=""></script>
+}
+
 <h2>Details</h2>
 
 <p>
